# UCR-Labs

./: .gitignore
CS100-Labs/lab-01---intro-to-software/: CMakeLists.txt  README.md
CS100-Labs/lab-01---intro-to-software/header/: c-echo.h  rectangle.hpp
CS100-Labs/lab-01---intro-to-software/src/: main.cpp  main_2.cpp  main_3.cpp  rectangle.cpp  test.cpp
CS100-Labs/lab-02---github-flow/: CMakeLists.txt  c-count.h  c-echo.h  main.cpp  test.cpp
CS100-Labs/lab-03---composite-pattern/: Add.hpp  CMakeLists.txt  Div.hpp  Mult.hpp  Sub.hpp  main.cpp  op.hpp  op_test.hpp  pow.hpp  rand.hpp
CS100-Labs/lab-04---valgrind/: README.md  lineage.cpp  person.cpp  person.h  personList.cpp  personList.h
CS100-Labs/lab-05---strategy-pattern/: CMakeLists.txt  README.md  main.cpp  sample_output.txt  select.hpp  select_and.hpp  select_contains.hpp  select_not.hpp  select_or.hpp  select_test.hpp  spreadsheet.cpp  spreadsheet.hpp  test.cpp
CS100-Labs/lab-07---factory-pattern/: CMakeLists.txt  README.md
CS100-Labs/lab-08---visitor-pattern/: CMakeLists.txt  README.md
CS100-Labs/lab-08---visitor-pattern/headers/: add.hpp  base.hpp  div.hpp  factory.hpp  iterator.cpp  iterator.hpp  mult.hpp  op.hpp  parse.hpp  pow.hpp  print.hpp  rand.hpp  sub.hpp  visitor.hpp  visitorLaTeX.hpp  visitorMathML.hpp
CS100-Labs/lab-08---visitor-pattern/src/: main.cpp
CS100-Labs/lab-08---visitor-pattern/tests/: div_test.hpp  iterator_test.hpp  latex_test.hpp  mathml_test.hpp  op_test.hpp  parse_test.hpp  pow_test.hpp  unit_test.cpp
CS183-Labs/: lab2_1.sh  lab2_2.sh  lab2_3.sh  lab3.sh  script.sh
(+224 files in other folders)
